syntax = "proto3";
package organization.service.v1;
option go_package = "github.com/Wafer233/msproject-be/api-gateway/proto/organization";

message GetOrgListMessage{
  int64 memId = 1;
}

message Organization {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  string realname = 4;
  string account = 5;
  int32 status = 6;
  string lastLoginTime = 7;
  string address = 8;
  int32 province = 9;
  int32 city = 10;
  int32 area = 11;
  string email = 12;
  string code = 13;
  string createTime = 14;
  string organizationCode = 15;
  string avatar = 16;
}

message GetOrgListResponse{
  repeated Organization organizationList = 1;
}


// Project service definition
service OrganizationService {
  // Menu navigation endpoint
  rpc GetOrgList(GetOrgListMessage) returns (GetOrgListResponse) {}
}


